--- a/.global_ignore
+++ b/.global_ignore
@@ -1,13 +1,10 @@
-# -*- mode: gitignore; -*-
-
-### https://raw.github.com/github/gitignore/master/Global/OSX.gitignore
-
+# OSX ######################################################
 .DS_Store
 .AppleDouble
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
 
 # Thumbnails
 ._*
@@ -23,8 +20,7 @@ Network Trash Folder
 Temporary Items
 .apdisk
 
-### https://raw.github.com/github/gitignore/master/Global/Emacs.gitignore
-
+# Emacs ####################################################
 *~
 \#*\#
 /.emacs.desktop
@@ -35,6 +31,8 @@ tramp
 .\#*
 ac-comphist.dat
 url/
+site-lisp/
+var/
 
 # Org-mode
 .org-id-locations
@@ -55,12 +53,13 @@ elpa/
 # AUCTeX auto folder
 auto/
 
-### https://raw.github.com/github/gitignore/master/Global/Vagrant.gitignore
+# cask packages
+.cask/
 
+# Vagrant ##################################################
 .vagrant/
 
-### https://raw.github.com/github/gitignore/master/Global/vim.gitignore
-
+# Vim ######################################################
 [._]*.s[a-w][a-z]
 [._]s[a-w][a-z]
 *.un~
