--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,68 +1,70 @@
 [alias]
-
+    unstage = reset -q HEAD --
+    discard = checkout --
+    nevermind = !git reset --hard HEAD && git clean -d -f
+    uncommit = reset --mixed HEAD~
+    save = commit -m
+    resave = commit --amend
+    fold = commit --amend --no-edit
+    last = log -1 HEAD --format=format:"%Cred%H"
+    copy-last-hash = !git last | pbcopy
+    summary = status -u -s
+    graph = log --graph -10 --branches --remotes --tags  --format=format:'%Cgreen%h %Creset• %<(75,trunc)%s (%cN, %ar) %Cred%d' --date-order
+    history = log -10 --format=format:'%Cgreen%h %Creset%s (%aN, %ar)'
+    new-branch = checkout -b
+    rename-branch = branch -m
+    delete-branch = branch -D
+    branches = branch
+    recent-branches = branch -a --sort=committerdate
+    tags = tag
+    stashes = stash list
+    prestage = diff
+    precommit = diff --cached
+    remotes = remote -v
+    move = mv
+    remove = rm
+    unmerged = branch --no-merged
+    unstash = stash pop
+    what = show
+    untrack = rm -r --cached
+    back = checkout 
     # View abbreviated SHA, description, and history graph of the latest 20 commits
 	l = log --pretty=oneline -n 20 --graph --abbrev-commit
-
     # View the current working tree status using the short format
 	s = status -s
-
     # Show the diff between the latest commit and the current state
 	d = !"git diff-index --quiet HEAD -- || clear; git --no-pager diff --patch-with-stat"
-
     # `git di $number` shows the diff between the state `$number` revisions ago and the current state
 	di = !"d() { git diff --patch-with-stat HEAD~$1; }; git diff-index --quiet HEAD -- || clear; d"
-
     # Pull in remote changes for the current repository and all its submodules
 	p = !"git pull; git submodule foreach git pull origin master"
-
     # Clone a repository including all submodules
 	c = clone --recursive
-
     # Commit all changes
 	ca = !git add -A && git commit -av
-
     # Switch to a branch, creating it if necessary
 	go = "!f() { git checkout -b \"$1\" 2> /dev/null || git checkout \"$1\"; }; f"
-
-    # Show verbose output about tags, branches or remotes
-	tags = tag -l
-	branches = branch -a
-	remotes = remote -v
-
     # List aliases
 	aliases = config --get-regexp alias
-
-    # Amend the currently staged files to the latest commit
-	amend = commit --amend --reuse-message=HEAD
-
     # Credit an author on the latest commit
 	credit = "!f() { git commit --amend --author \"$1 <$2>\" -C HEAD; }; f"
-
     # Interactive rebase with the given number of latest commits
 	reb = "!r() { git rebase -i HEAD~$1; }; r"
-
     # Remove the old tag with this name and tag the latest commit with it.
 	retag = "!r() { git tag -d $1 && git push origin :refs/tags/$1 && git tag $1; }; r"
-
     # Find branches containing commit
 	fb = "!f() { git branch -a --contains $1; }; f"
-
     # Find tags containing commit
 	ft = "!f() { git describe --always --contains $1; }; f"
-
     # Find commits by source code
 	fc = "!f() { git log --pretty=format:'%C(yellow)%h  %Cblue%ad  %Creset%s%Cgreen  [%cn] %Cred%d' --decorate --date=short -S$1; }; f"
-
 	# Find commits by commit message
 	fm = "!f() { git log --pretty=format:'%C(yellow)%h  %Cblue%ad  %Creset%s%Cgreen  [%cn] %Cred%d' --decorate --date=short --grep=$1; }; f"
-
     # Remove branches that have already been merged with master
 	# a.k.a. ‘delete merged’
 	dm = "!git branch --merged | grep -v '\\*' | xargs -n 1 git branch -d"
-
 	# List contributors with number of commits
 	contributors = shortlog --summary --numbered
-
 	# Merge GitHub pull request on top of the current branch or,
 	# if a branch name is specified, on top of the specified branch
 	mpr = "!f() { \
