git/.gitconfig: Add include directive

--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -108,10 +108,8 @@
 	# https://git-scm.com/docs/git-update-index#_untracked_cache
 	untrackedCache = true
 
-[user]
-
-	name = yshinagawa
-	email = yosh.sn@gmail.com
+[include]
+    path = ~/.gitconfig.local
 
 [color]
 
