bash/.tmux.conf: Change prefix and some typo

--- a/bash/.tmux.conf
+++ b/bash/.tmux.conf
@@ -1,13 +1,12 @@
-set-option -g default-shell /bin/bash
-
 set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256
+set -g terminal-overrides 'xterm:colors=256'
 
-set -g prefix C-q
+set -g prefix C-t
 unbind C-b
 
 set-option -g status-position top
-set-option -g status-left-length 90 set-option -g status-right-length 90
+set-option -g status-left-length 90
+set-option -g status-right-length 90
 
 set-option -g status-left '#H:[#P]'
 
