bash/.tmux.conf: Change status style

--- a/bash/.tmux.conf
+++ b/bash/.tmux.conf
@@ -1,18 +1,23 @@
-set-option -g default-terminal screen-256color
-set -g terminal-overrides 'xterm:colors=256'
-
+# General
 set -g prefix C-t
 unbind C-b
+set -sg escape-time 1
 
+# Appearance
+set-option -g default-terminal screen-256color
+set -g terminal-overrides 'xterm:colors=256'
 set-option -g status-position top
 set-option -g status-left-length 90
 set-option -g status-right-length 90
-
-set-option -g status-left '#H:[#P]'
-
+set-option -g status-left 'Session: #S #I #P'
+set-option -g status-right '%Y-%m-%d(%a) %H:%M'
 set-option -g status-interval 1
 set-option -g status-justify centre
+set -g status-fg white
+set -g status-bg blue 
+set -g pane-active-border-fg blue
 
+# Operations
 bind h select-pane -L
 bind j select-pane -D
 bind k select-pane -U
@@ -26,7 +31,19 @@ bind -r L resize-pane -R 5
 bind | split-window -h
 bind - split-window -v
 
+# Rotate active pane
+bind-key -n C-o run "tmux select-pane -l || tmux select-pane -t :.+"
+
+# Break or kill pane
+bind-key b break-pane
+bind-key q kill-pane
+bind-key C-q kill-session
+
+# Display pane
+bind-key i display-panes
+
 set-option -g base-index 1
+set-option -g pane-base-index 1
 
 setw -g mode-keys vi
 bind -T copy-mode-vi v send -X begin-selection
@@ -36,3 +53,6 @@ bind -T copy-mode-vi y send -X copy-selection
 bind -T copy-mode-vi Y send -X copy-line
 
 bind-key C-p paste-buffer
+
+# Reload .tmux.conf
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
