bash/.tmux.conf: Fix status-left

--- a/bash/.tmux.conf
+++ b/bash/.tmux.conf
@@ -9,8 +9,8 @@ set -g terminal-overrides 'xterm:colors=256'
 set-option -g status-position top
 set-option -g status-left-length 90
 set-option -g status-right-length 90
-set-option -g status-left 'Session: #S #I #P'
-set-option -g status-right '%Y-%m-%d(%a) %H:%M'
+set-option -g status-left ' #S:#I:#P'
+set-option -g status-right '%Y-%m-%d(%a) %H:%M '
 set-option -g status-interval 1
 set-option -g status-justify centre
 set -g status-fg white
