--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -56,3 +56,9 @@ bind-key C-p paste-buffer
 
 # Reload .tmux.conf
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
+
+# Tmux Plugin Manager
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+run -b '~/.tmux/plugins/tpm/tpm'
